--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -54,11 +54,11 @@
       <h2 class="text-xl font-semibold text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Explore my journey as I dive into the world of data!</h2>
 
       <!--Timeline-->
-      <div class="pt-8 mb-5 w-full max-w-6xl">
-        <ul class="timeline timeline-vertical lg:timeline-horizontal overflow-x-auto">
+      <div class="pt-8 mb-5 w-full max-w-7xl flex justify-center">
+        <ul class="timeline timeline-vertical lg:timeline-horizontal">
           <!-- Business Management Degree -->
           <li>
-            <div class="timeline-start timeline-box text-center text-base-content max-w-xs">
+            <div class="timeline-start timeline-box text-center text-base-content max-w-[240px]">
               <time class="font-mono text-info italic">2020</time>
               <div class="text-lg">Graduated in Business Management</div>
               <p>ESCP Business School</p>
@@ -74,7 +74,7 @@
             <div class="timeline-middle">
               <div class="h-5 w-5 bg-accent rounded-full"></div>
             </div>
-            <div class="timeline-end timeline-box text-center text-base-content max-w-xs">
+            <div class="timeline-end timeline-box text-center text-base-content max-w-[240px]">
               <time class="font-mono text-info italic">2021-2022</time>
               <div class="text-lg">Started learning Computer Science</div>
               <p>Self-taught web development</p>
@@ -84,7 +84,7 @@
           <!-- Logistics & Accounts Job -->
           <li>
             <hr class="bg-accent"/>
-            <div class="timeline-start timeline-box text-center text-base-content max-w-xs">
+            <div class="timeline-start timeline-box text-center text-base-content max-w-[240px]">
               <time class="font-mono text-info italic">2022-2024</time>
               <div class="text-lg">Worked in Logistics & Accounting</div>
               <p>Corto Safaris Ltd</p>
@@ -100,7 +100,7 @@
             <div class="timeline-middle">
               <div class="h-5 w-5 bg-accent rounded-full"></div>
             </div>
-            <div class="timeline-end timeline-box text-center text-base-content max-w-xs">
+            <div class="timeline-end timeline-box text-center text-base-content max-w-[240px]">
               <time class="font-mono italic text-info">2025</time>
               <div class="text-lg ">Graduated in Computer Science</div>
               <p>TU Dublin</p>
@@ -110,13 +110,13 @@
           <!-- Currently -->
           <li>
             <hr />
-            <div class="timeline-start timeline-box text-center text-base-content max-w-xs">
+            <div class="timeline-start timeline-box text-center text-base-content max-w-[240px]">
               <time class="font-mono italic text-info">2025-now</time>
               <div class="text-lg ">Career in Data</div>
               <p>Landing that perject job soon!</p>
             </div>
             <div class="timeline-middle">
-              <div class="h-5 w-5  outline outline-accent rounded-full"></div>
+              <div class="h-5 w-5  outline outline-accent rounded-full animate-pulse"></div>
             </div>
           </li>
         </ul>
@@ -136,7 +136,7 @@
         </div>
         
         <div class="w-full max-w-lg bg-base-100 outline outline-1 outline-primary rounded-lg py-4">
-          <h1 class="text-3xl text-primary font-extrabold font-mono pb-4 text-center">Experience:</h1>
+          <h1 class="text-3xl text-primary font-extrabold font-mono pb-4 text-center">Skills:</h1>
           <div class="container w-full max-w-6xl justify-center flex flex-wrap gap-2">
             <div class="badge badge-lg badge-outline badge-warning">Machine learning</div>
             <div class="badge badge-lg badge-outline badge-warning">Deep learning</div>
