--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -51,7 +51,7 @@
       <h1 class="text-4xl text-primary font-extrabold font-mono mb-6 text-center">Computer science</h1>
 
       <!--Header introduction-->
-      <h2 class="text-xl font-semibold text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Explore my journey as I dive into the world of data!</h2>
+      <h2 class="text-xl font-semibold font-mono text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Explore my journey as I dive into the world of data!</h2>
 
       <!--Timeline-->
       <div class="pt-8 mb-5 w-full max-w-7xl flex justify-center">
