--- a/code/public/index.html
+++ b/code/public/index.html
@@ -33,6 +33,21 @@
             alt="Dark Mode Icon" />
         </label>
 
+        <!-- Floating menu -->
+      <div class="fixed bottom-10 right-6 z-50">
+        <div class="dropdown dropdown-top dropdown-end dropdown-hover">
+          <label tabindex="0" class="btn btn-circle btn-primary hover:scale-110">
+            <img src="icons/dark/icons8-hamburger-menu-100-floating.png" alt="Menu" class="h-10 w-10 bubble-float"/>
+          </label>
+          <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cs.html">Computer Science</a></li>
+            <li><a href="art.html">Art</a></li>
+            <li><a href="img/cv.pdf" target="_blank">CV</a></li>
+          </ul>
+        </div>
+      </div>
+
         <!--Header image-->
         <div class="avatar">
           <div class="avatar-styling">
