Adding pyqt5 project card

--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -155,7 +155,7 @@
         <a role="tab" class="tab tab-active flex-1 sm:flex-none" data-type="all">All</a>
         <a role="tab" class="tab flex-1 sm:flex-none" data-type="freelance">Freelance</a>
         <a role="tab" class="tab flex-1 sm:flex-none" data-type="university">University</a>
-        <!--<a role="tab" class="tab flex-1 sm:flex-none" data-type="fun">Just for Fun</a>-->
+        <a role="tab" class="tab flex-1 sm:flex-none" data-type="fun">Personal</a>
       </div>
 
       <!--Project cards-->
@@ -362,7 +362,38 @@
         </div>
 
         <!--Just for fun project-->
-        
+        <div class="card card-compact w-96 bg-base-100 shadow-xl" data-type="fun">
+          <figure>
+            <img
+              src="img/to-do-app-screen.png"
+              alt="Screenshot of app"/>
+          </figure>
+          <div class="card-body">
+            <div class="flex justify-between items-center">
+              <h2 class="card-title">
+              To do list application
+              </h2>
+              <span>
+                <time class="font-mono text-sm text-info italic">2025</time>
+              </span>
+            </div>
+            <div>
+              <a href="https://github.com/anaisbl/to-do-list-app" target="_blank" class="btn btn-xs btn-outline">
+                View
+                <svg width="16" height="16" fill="currentColor" class="ml-1">
+                  <path d="M5 3l5 5-5 5" stroke="currentColor" stroke-width="2" fill="none"/>
+                </svg>
+              </a>
+            </div>
+            <p>An application built with the PyQt5 library in Python. Includes SQLite database for permanent storage, and features to add, modify, delete and tick off tasks on a very cute dashboard!</p>
+            <div class="card-actions justify-normal py-2">
+              <div class="badge badge-outline badge-success">Python</div>
+              <div class="badge badge-outline badge-success">SQL</div>
+              <div class="badge badge-outline badge-success">QCSS</div>
+              <div class="badge badge-outline badge-warning">Software development</div>
+            </div>
+          </div>
+        </div>
 
       </section>
     </div>
