--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -366,7 +366,7 @@
           <figure>
             <img
               src="img/to-do-app-screen.png"
-              alt="Screenshot of app"/>
+              alt="Screenshot of application"/>
           </figure>
           <div class="card-body">
             <div class="flex justify-between items-center">
