--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,10 +9,10 @@
         <!--All Icons by Icons8-->
         <title>Anaïs | Home</title>
     </head>
-    <body class="bg-base-200 fade-transition flex flex-col min-h-screen">
+    <body class="bg-base-200 fade-transition h-screen flex flex-col">
 
       <!--full body container for responsivness & centering-->
-      <div class="flex-grow flex flex-col items-center justify-center w-full pt-5">
+      <div class="flex-grow flex flex-col items-center justify-center w-full">
 
         <!--Light/Dark mode button-->
         <label class="grid cursor-pointer place-items-center fixed top-4 right-4">
@@ -33,21 +33,6 @@
             alt="Dark Mode Icon" />
         </label>
 
-        <!-- Floating menu -->
-      <div class="fixed bottom-10 right-6 z-50">
-        <div class="dropdown dropdown-top dropdown-end dropdown-hover">
-          <label tabindex="0" class="btn btn-circle btn-primary hover:scale-110">
-            <img src="icons/dark/icons8-hamburger-menu-100-floating.png" alt="Menu" class="h-10 w-10 bubble-float"/>
-          </label>
-          <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cs.html">Computer Science</a></li>
-            <li><a href="art.html">Art</a></li>
-            <li><a href="img/cv.pdf" target="_blank">CV</a></li>
-          </ul>
-        </div>
-      </div>
-
         <!--Header image-->
         <div class="avatar">
           <div class="avatar-styling">
@@ -56,90 +41,27 @@
         </div>
 
         <!--Header title-->
-        <h1 class="text-4xl font-extrabold text-primary my-6 text-center">Hi, my name is Anaïs</h1>
+        <h1 class="text-5xl font-extrabold text-primary my-6 text-center">Hi, my name is Anaïs</h1>
 
         <!--Header introduction-->
-        <h4 class="text-lg text-base-content text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
+        <h4 class="text-xl text-base-content text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
 
-        <div class="divider divider-secondary py-4 w-full max-w-5xl mx-auto">Main</div>
         <div class="mb-6 flex flex-wrap justify-center gap-4">
           <button class="btn-main"><a href="cs.html">Computer science</a></button>
           <button class="btn-main"><a href="art.html">Art</a></button>
-          <button class="btn-main"><a href="img/cv.pdf" target="_blank">View my CV</a></button>
-        </div>
-
-        <div class="divider divider-secondary py-4 w-full max-w-5xl mx-auto">Connect</div>
-
-        <!--Contact buttons-->
-        <div class="space-x-8 flex justify-center">
-          <div class="lg:tooltip" data-tip="Email">
-            <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-              <img width="100" height="100" src="icons/dark/icons8-email-100-green.png" alt="Email" class="animated-icon social-email"/>
-            </a>
-          </div>
-          <div class="lg:tooltip" data-tip="Github">
-            <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-              <img width="100" height="100" src="icons/dark/icons8-github-100-green.png" alt="Github" class="animated-icon social-github"/>
-            </a>
-          </div>
-          <div class="lg:tooltip" data-tip="Linkedin">
-            <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-              <img width="100" height="100" src="icons/dark/icons8-linkedin-100-green.png" alt="Linkedin" class="animated-icon social-linkedin"/>
-            </a>
+          <button class="btn-main"><a href="about.html">About</a></button>
+          <div class="dropdown dropdown-right dropdown-center dropdown-hover">
+            <button tabindex="0" class="btn-main"><a href="">Contact</a></button>
+            <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a href="https://www.linkedin.com/in/anais-blenet/" target="_blank">Linkedin</a></li>
+              <li><a href="https://github.com/anaisbl" target="_blank">Github</a></li>
+            </ul>
           </div>
         </div>
-        
-        <div class="divider divider-secondary py-4 w-full max-w-5xl mx-auto">Get to know me</div>
-        <!--About section-->
-        <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-200 p-8 rounded-lg shadow-lg">
-          <h2 id="about" class="text-2xl font-extrabold text-primary mb-6">Why art and computer science?</h2>
-          <p class="text-lg mb-6 leading-relaxed text-base-content">Art has always held a special place in my heart—I've been drawing since before I could even write! I've used it to capture my dreams, fears, ideas, and everything I see or imagine. While I chose not to pursue formal education in art, I kept it as a personal passion. In my free time I continue to hone my skills and take on creative projects with plenty of freedom and exciting ideas.</p>
-          <div class="carousel rounded-box max-w-full mb-6">
-            <div class="carousel-item w-full">
-              <img
-                src="img/gif art.gif"
-                class="w-full" />
-            </div>
-          </div>
-          
-          <p class="text-lg mb-6 leading-relaxed text-accent-content">Art and computer science may seem worlds apart, and in some ways, they are. I enjoy how different they are in both content and approach. Art fuels my creativity, while computer science challenges the analytical side of my brain. Both let me get "in the zone," whether I'm training a classification model or picking a color palette for a new project. Growing up, I had minimal interest in computers. I enjoyed learning tips, tricks, and shortcuts, but the science behind computers felt so far out of my reach.</p>
-
-          <div class="carousel rounded-box max-w-full mb-6">
-            <div class="carousel-item w-full">
-              <img
-                src="img/gif cs.gif"
-                class="w-full" />
-            </div>
-          </div>
-
-          <p class="text-lg mb-6 leading-relaxed text-accent-content">That changed during the pandemic, when I took an elective coding class in the final year of my bachelor's degree. It opened my eyes to the world of computing, and I thought, "So, this is what it's all about!" <br>Five years later, I've earned a master's in computer science, understand OOP, and can deploy my own websites and data science projects. Time has been a great teacher, and I'm proud of how far I've come. I can't wait to look back in 2030 and see how much further I've gone!</p>
-
-          <div class="carousel rounded-box max-w-full">
-            <div class="carousel-item w-full">
-              <img
-                src="img/gif end.gif"
-                class="w-full" />
-            </div>
-          </div>
-
       </div>
-
-      <footer class="footer footer-center bg-secondary p-2">
+      <footer class="footer footer-center bg-secondary p-2 w-full">
         <aside>
           <p class="text-primary-content">Copyright © 2025 - All right reserved to Nana</p>
-          <nav>
-            <div class="grid grid-flow-col gap-5 pb-2">
-              <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
-                <img class="social-email" width="50" height="50" src="icons/dark/icons8-email-100-green.png" alt="Email" />
-              </a>
-              <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-                <img class="social-github" width="50" height="50" src="icons/dark/icons8-github-100-green.png" alt="Github" />
-              </a>
-              <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-                <img class="social-linkedin" width="50" height="50" src="icons/dark/icons8-linkedin-100-green.png" alt="Linkedin" />
-              </a>
-            </div>
-          </nav>
         </aside>
       </footer>
 
