--- a/code/public/index.html
+++ b/code/public/index.html
@@ -36,7 +36,7 @@
         <!--Header image-->
         <div class="avatar">
           <div class="avatar-styling">
-            <img id="avatar" src="img/profile2.jpg" class="w-full h-full rounded-full"/>
+            <img id="avatar" src="img/profile-light.jpg" class="w-full h-full rounded-full"/>
           </div>
         </div>
 
