Adding about to nav buttons

--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -40,7 +40,8 @@
             <img src="icons/dark/icons8-hamburger-menu-100-floating.png" alt="Menu" class="h-10 w-10 bubble-float"/>
           </label>
           <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="art.html">Art</a></li>
             <li><a href="img/cv.pdf" target="_blank">CV</a></li>
           </ul>
@@ -403,9 +404,9 @@
         <p class="text-primary-content">Copyright © 2025 - All right reserved to Nana</p>
         <nav>
           <div class="grid grid-flow-col gap-5 pb-2">
-            <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
+            <!--<a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
               <img class="social-email" width="50" height="50" src="icons/dark/icons8-email-100-green.png" alt="Email" />
-            </a>
+            </a>-->
             <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
               <img class="social-github" width="50" height="50" src="icons/dark/icons8-github-100-green.png" alt="Github" />
             </a>
