--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -40,7 +40,7 @@
             <img src="icons/dark/icons8-hamburger-menu-100-floating.png" alt="Menu" class="h-10 w-10 bubble-float"/>
           </label>
           <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="art.html">Art</a></li>
             <li><a href="img/cv.pdf" target="_blank">CV</a></li>
