--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,10 +12,10 @@
     <body class="bg-base-200 fade-transition h-screen overflow-hidden flex flex-col">
 
       <!--full body container for responsivness & centering-->
-      <div class="flex-grow flex flex-col items-center justify-center w-full">
+      <div class="flex-grow flex flex-col items-center justify-center overflow-hidden w-full">
 
         <!--Light/Dark mode button-->
-        <label class="grid cursor-pointer place-items-center sm:fixed sm:top-4 sm:right-4 my-2 pb-1">
+        <label class="grid cursor-pointer top-1 right-1 place-items-center fixed sm:top-4 sm:right-4">
           <input
             type="checkbox"
             value="synthwave"
