--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="coffee">
   <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-T999XFZZ');</script>
+    <!-- End Google Tag Manager -->
+
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="dist/style.css" rel="stylesheet">
@@ -10,6 +18,13 @@
       <title>Anaïs | CS Projects</title>
   </head>
   <body class="bg-base-200 fade-transition flex flex-col min-h-screen">
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T999XFZZ"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     
     <!--full body container for responsivness & centering-->
     <div class="flex-grow flex flex-col items-center justify-center pt-5">
