--- a/code/public/about.html
+++ b/code/public/about.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="coffee">
   <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-T999XFZZ');</script>
-    <!-- End Google Tag Manager -->
-     
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="dist/style.css" rel="stylesheet">
@@ -17,14 +9,17 @@
       <!--All Icons by Icons8-->
       <title>Anaïs | About</title>
   </head>
-  <body class="bg-base-100 fade-transition flex flex-col min-h-screen">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L15XSE8BPC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T999XFZZ"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    gtag('config', 'G-L15XSE8BPC');
+  </script>
+  
+  <body class="bg-base-100 fade-transition flex flex-col min-h-screen">
 
     <!--full body container for responsivness & centering-->
     <div class="flex-grow flex flex-col items-center justify-center pt-5">
