--- a/code/public/about.html
+++ b/code/public/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="coffee">
+<html lang="en" data-theme="fantasy">
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
     <!--full body container for responsivness & centering-->
     <div class="flex-grow flex flex-col items-center justify-center pt-5">
 
-      <!--Light/Dark mode button-->
+      <!--Light/Dark mode button--
       <label class="grid cursor-pointer place-items-center fixed top-4 right-4">
         <input
           type="checkbox"
@@ -40,13 +40,13 @@
           class="col-start-2 row-start-1"
           width="20"
           alt="Dark Mode Icon" />
-      </label>
+      </label>-->
 
       <!-- Floating menu -->
       <div class="fixed bottom-10 right-6 z-50">
         <div class="dropdown dropdown-top dropdown-end dropdown-hover">
           <label tabindex="0" class="btn btn-circle btn-primary hover:scale-110">
-            <img src="icons/dark/icons8-hamburger-menu-100-floating.png" alt="Menu" class="h-10 w-10 bubble-float"/>
+            <img src="icons/light/icons8-hamburger-menu-100-light.png" alt="Menu" class="h-10 w-10 bubble-float"/>
           </label>
           <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
             <li><a href="index.html">Home</a></li>
@@ -63,7 +63,7 @@
       <!--Header image-->
       <div class="avatar">
         <div class="avatar-styling">
-          <img id="avatar" src="img/profile.jpg" class="w-full h-full rounded-full"/>
+          <img id="avatar" src="img/profile-light.jpg" class="w-full h-full rounded-full"/>
         </div>
       </div>
 
@@ -144,10 +144,10 @@
               <img class="social-email" width="50" height="50" src="icons/dark/icons8-email-100-green.png" alt="Email" />
             </a>-->
             <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-github" width="50" height="50" src="icons/dark/icons8-github-100-green.png" alt="Github" />
+              <img class="social-github" width="50" height="50" src="icons/light/icons8-github-100-light.png" alt="Github" />
             </a>
             <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
-              <img class="social-linkedin" width="50" height="50" src="icons/dark/icons8-linkedin-100-green.png" alt="Linkedin" />
+              <img class="social-linkedin" width="50" height="50" src="icons/light/icons8-linkedin-100-light.png" alt="Linkedin" />
             </a>
           </div>
         </nav>
