--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="coffee">
+<html lang="en" data-theme="fantasy">
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
     <!--full body container for responsivness & centering-->
     <div class="flex-grow flex flex-col items-center justify-center overflow-hidden w-full">
 
-      <!--Light/Dark mode button-->
+      <!--Light/Dark mode button--
       <label class="grid cursor-pointer top-1 right-1 place-items-center fixed sm:top-4 sm:right-4">
         <input
           type="checkbox"
@@ -41,7 +41,7 @@
           class="col-start-2 row-start-1"
           width="20"
           alt="Dark Mode Icon" />
-      </label>
+      </label>-->
 
       <!--Header image-->
       <div class="avatar">
